infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: amdockertrain/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv #service name
spec:
  selector:
    app: moderation #identify pods with label moderation for exposing
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 #port inside node --> targetPort
      targetPort: 4003 #port to be exposed in pod
