infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: amdockertrain/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv #service name
spec:
  selector:
    app: posts #identify pods with label posts for exposing
  ports:
    - name: posts
      protocol: TCP
      port: 4000 #port inside node --> targetPort
      targetPort: 4000 #port to be exposed in pod
