infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv #service name
spec:
  type: NodePort #service type
  selector:
    app: posts #identify pods with label posts for exposing
  ports:
    - name: posts
      protocol: TCP
      port: 4000 #port inside node --> targetPort
      targetPort: 4000 #port to be exposed in pod
