infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: amdockertrain/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv #service name
spec:
  selector:
    app: query #identify pods with label query for exposing
  ports:
    - name: query
      protocol: TCP
      port: 4002 #port inside node --> targetPort
      targetPort: 4002 #port to be exposed in pod
